--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,5 +1,5 @@
 $mainFont: "Work Sans";
-$secondaryFont: "Bricolage Grotesque";
+$secondFont: "Bricolage Grotesque";
 
 /*          COLORS          */
 $darkColor: #1c1c1c;
