--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -4,3 +4,5 @@
 
 /*          COMPONENTS          */
 @import "./components/header";
+@import "./components/hero";
+@import "./components/services";
