--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -23,3 +23,21 @@ body {
     max-width: 1158px;
   }
 }
+
+.main {
+  &-title {
+    font-weight: 900;
+    font-size: 38px;
+    text-transform: uppercase;
+    text-align: center;
+
+    margin-bottom: 10px;
+  }
+
+  &-descr {
+    font-weight: 300;
+    font-size: 16px;
+    line-height: 1.4;
+    text-align: center;
+  }
+}
