--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,3 +6,5 @@
 @import "./components/header";
 @import "./components/hero";
 @import "./components/services";
+@import "./components/about";
+@import "./components/property";
