--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -10,3 +10,5 @@
 @import "./components/property";
 @import "./components/benefits";
 @import "./components/team";
+@import "./components/send";
+@import "./components/footer";
