--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -39,5 +39,12 @@ body {
     font-size: 16px;
     line-height: 1.4;
     text-align: center;
+
+    @media screen and (min-width: 1200px) {
+      max-width: 930px;
+      text-align: center;
+
+      margin: 0 auto;
+    }
   }
 }
