--- a/scss/components/_send.scss
+++ b/scss/components/_send.scss
@@ -17,6 +17,21 @@
     margin-bottom: 26px;
   }
 
+  &-img {
+    &-wrap {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+    }
+  }
+
+  &-content {
+    margin-left: auto;
+    @media screen and (min-width: 1200px) {
+      max-width: 580px;
+    }
+  }
+
   &-form {
     display: flex;
     height: 75px;
