--- a/scss/components/_about.scss
+++ b/scss/components/_about.scss
@@ -5,10 +5,20 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    @media screen and (min-width: 768px) {
+      flex-direction: row;
+      align-items: center;
+      gap: 60px;
+    }
   }
 
   &-title {
     margin-bottom: 22px;
+
+    @media screen and (min-width: 768px) {
+      text-align: left;
+    }
   }
 
   &-descr {
@@ -19,6 +29,10 @@
     text-align: center;
 
     margin-bottom: 22px;
+
+    @media screen and (min-width: 768px) {
+      text-align: left;
+    }
   }
 
   &-btn {
@@ -33,11 +47,27 @@
     padding: 20px 22px;
     margin: 0 auto;
     margin-bottom: 30px;
+
+    @media screen and (min-width: 768px) {
+      margin: 0 0 30px 0;
+    }
   }
 
   &-img {
+    @media screen and (min-width: 768px) {
+      width: 100%;
+    }
     &-wrap {
       position: relative;
+
+      @media screen and (min-width: 768px) {
+        min-width: 350px;
+      }
+
+      @media screen and (min-width: 1200px) {
+        max-width: 498px;
+        min-width: 498px;
+      }
 
       &::before,
       &::after {
@@ -48,16 +78,29 @@
         background-color: $darkColor;
         border-radius: 50%;
         z-index: -1;
+
+        @media screen and (min-width: 768px) {
+          width: 88px;
+          height: 88px;
+        }
       }
 
       &::before {
         top: -20px;
         right: -20px;
+        @media screen and (min-width: 768px) {
+          top: -44px;
+          right: -44px;
+        }
       }
 
       &::after {
         bottom: 20%;
         left: -20px;
+
+        @media screen and (min-width: 768px) {
+          left: -44px;
+        }
       }
     }
   }
