--- a/scss/components/_services.scss
+++ b/scss/components/_services.scss
@@ -32,6 +32,14 @@
       }
     }
 
+    @media screen and (min-width: 768px) {
+      width: calc((100% / 2) - 22px);
+    }
+
+    @media screen and (min-width: 1200px) {
+      width: calc((100% / 3) - 44px);
+    }
+
     &-icon {
       display: block;
       max-width: 80px;
