--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -67,7 +67,7 @@
   &-burger {
     position: absolute;
     top: 0;
-    left: 0;
+    right: 0;
     width: 100%;
     height: 100%;
     background-color: $lightColor;
@@ -84,6 +84,10 @@
     pointer-events: none;
     opacity: 0;
     transform: translateY(-20%);
+
+    @media screen and (min-width: 768px) {
+      width: 50%;
+    }
 
     @media screen and (min-width: 1200px) {
       display: none;
